# ClaudeMonitor

./: .gitignore  CLAUDE.md  ClaudeMonitor.vbs  PRD.md  launch.json  planning.md  start.bat  tasks.md  trayconsole.json  trayconsole_client.py  usage_monitor.py
extensions/: manifest.json  popup.html  popup.js
rust/: .gitignore  Cargo.toml  build.rs
rust/examples/: api_probe.rs  parse_dump.rs  tls_probe.rs
rust/src/: account_manager.rs  api.rs  claude_code_creds.rs  codex_usage.rs  cookie_bridge.rs  http_client.rs  lib.rs  main.rs  paths.rs  proxy.rs  tray.rs  trayconsole.rs  types.rs
rust/ui/: main.slint
tools/probe-oauth/: go.mod  go.sum  headless.go  main.go
tools/probe-oauth/cookiebridge/: client.go
