[package]
name = "claude_monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Compact tray overlay for Claude AI usage monitoring"
authors = ["upsoft"]

[lib]
name = "claude_monitor"
path = "src/lib.rs"

[[bin]]
name = "ClaudeMonitor"
path = "src/main.rs"

[dependencies]
slint = { version = "1.9", features = ["raw-window-handle-06"] }
raw-window-handle = "0.6"
# Pure-Rust HTTP client (rustls). Verified 2026-04-29: claude.ai accepts
# plain rustls TLS — no Chrome fingerprinting needed (see examples/tls_probe.rs).
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "rustls-tls", "stream", "socks"] }
tray-icon = "0.19"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "net", "signal", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
fontdue = "0.9"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
url = "2"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
] }

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 1
debug = 1
